--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,9 @@
-* {
+/* {
     border: 1px solid red;
 }
+*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
 
 html {
     font-family: 'Roboto';
@@ -8,39 +11,98 @@ html {
 
 body {
     display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 .section {
     display: flex;
+    justify-content: center;
     flex-direction: column;
-}
-
-.intro {
-    display: flex;
-    align-items: center;
-    padding: 0 50px 0 50px;
+    padding: 0 300px 0 300px;
+    height: fit-content;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 16px;
 }
 
 .header-left > p {
     font-size: 24px;
+    font-weight: 1000;
 }
 
 ul {
     display: flex;
     list-style: none;
+    gap: 25px;
 }
 
 a {
     text-decoration: none;
     font-size: 18px;
     color: #f9faf8;
+}
+
+/* INTRO SECTION */
+
+.intro {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 0;
+    flex: 1 1 auto;
+    height: fit-content;
+}
+
+.intro-left, .intro-right {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.intro-title {
+    font-weight: 900;
+    font-size: 48px;
+}
+
+h1 {
+    margin: 0;
+}
+
+.intro-left > p {
+    margin-top: 0;
+}
+
+button {
+    background-color: #3882f7;
+    color: #f9faf8;
+    font-weight: 900;
+    padding: 10px 25px;
+    border-radius: 5px;
+}
+
+.intro-left > div > button {
+    border: 0;
+}
+
+.intro-right {
+    text-align: center;
+    align-items: center;
+    background-color: #646d7a;
+}
+
+/* FOOTER */
+
+footer {
+    text-align: center;
+    justify-content: center;
+    padding: 15px;
 }
 
 /* BACKGROUND AND FONT COLOUR OF THESE SECTIONS */
