--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,6 +97,43 @@ button {
     background-color: #646d7a;
 }
 
+/* SECTION TWO, RANDOM INFORMATION */
+
+.section.two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-two-title {
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.section-two-elements {
+    display: flex;
+    justify-content: space-around;
+    gap: 10%;
+}
+
+.element {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+}
+
+img {
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882f7;
+    border-radius: 10%;
+}
+
+.element .text {
+    text-align: center;
+}
+
 /* FOOTER */
 
 footer {
